<resources>
    <string name="app_name">Pure Music</string>
    <string name="demo_description">You can also find us with:  electronic dance music 2023 edm top electronic dance songs 2023 edm songs edm music 2023 electronic dance music best electro dance music popular edm songs top edm songs edm songs 2023 edm music top edm songs 2023 top electronic dance songs edm 2023 popular edm songs 2023 best electro dance music 2023  No matter how your day is, you can always listen to good music:  1. EDM Hits Playlist - Popular EDM Hits in 2023 -  We would like to keep you with us many years from now on! So, in the next year, you could find our playlist like this: EDM 2024 ♫ Top EDM Songs 2024</string>
    <string name="Song_and_artist_name">Song • %1$s</string>
    <string name="playlist_and_author">Playlist • %1$s</string>
    <string name="album_and_artist_name">Album • %1$s</string>
    <string name="subscribers">%1$s subscribers</string>
    <string name="year_and_category">%1$s • %2$s</string>
    <string name="album_length">%1$s tracks  %2$s</string>
    <string name="view_count">%1$s views</string>
    <string name="lyrics_provider">Lyrics provided by Musixmatch</string>
    <string name="clear_search_history">Clear search history</string>
    <string name="liked">Liked</string>
    <string name="like">Like</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="download">Download</string>
    <string name="downloaded">Downloaded</string>
    <string name="downloading">Downloading</string>
    <string name="preparing">Preparing</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="na_na">NA:NA</string>
    <string name="cache_size">%1$s MB</string>
    <string name="favorite">Favorite</string>
    <string name="followed">Followed</string>
    <string name="most_played">Most Played</string>
    <string name="Downloaded">Downloaded</string>
    <string name="favorite_playlists">Favorite Playlists</string>
    <string name="no_favorite_playlists">No favorite playlists</string>
    <string name="downloaded_playlists">Downloaded Playlists</string>
    <string name="no_playlists_downloaded">No playlists downloaded</string>
    <string name="your_playlists">Your Local Playlists</string>
    <string name="no_playlists_added">No playlists added</string>
    <string name="recently_added">Recently Added</string>
    <string name="search_for_songs_artists_albums_playlists_and_more">Search for songs, artists, albums, playlists, and more</string>
    <string name="everything_you_need">Everything you need</string>
    <string name="restore_failed">Restore Failed</string>
    <string name="restore_success">Restore Success</string>
    <string name="search">Search</string>
    <string name="songs">Songs</string>
    <string name="albums">Albums</string>
    <string name="playlists">Playlists</string>
    <string name="artists">Artists</string>
    <string name="library">Library</string>
    <string name="home">Home</string>
    <string name="popular">Popular</string>
    <string name="error">Error</string>
    <string name="follow">Follow</string>
    <string name="retry">Retry</string>
    <string name="removed_download">Removed download</string>
    <string name="share_url">Share URL</string>
    <string name="available_online">Available online</string>
    <string name="unavailable">Unavailable</string>
    <string name="you">You</string>
    <string name="good_morning">Good Morning</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_evening">Good Evening</string>
    <string name="good_night">Good Night</string>
    <string name="quick_picks">Quick picks</string>
    <string name="this_song_is_not_available">This song is not available</string>
    <string name="in_charts">in Charts</string>
    <string name="playlist_name_cannot_be_empty">Playlist name cannot be empty</string>
    <string name="this_app_needs_to_access_your_notification">This app needs to access your notification</string>
    <string name="shared">Shared</string>
    <string name="line_synced">Line Synced</string>
    <string name="unsynced">Unsynced</string>
    <string name="playlist_is_empty">Playlist is empty</string>
    <string name="option">Option</string>
    <string name="no_description">No description</string>
    <string name="in_search">in Search</string>
    <string name="clear_player_cache">Clear Player Cache</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="content_country">Content Country</string>
    <string name="change">Change</string>
    <string name="quality">Quality</string>
    <string name="clear_downloaded_cache">Clear Downloaded Cache</string>
    <string name="clear_thumbnail_cache">Clear Thumbnail Cache</string>
    <string name="add">Add</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="edit_title">Edit title</string>
    <string name="edit_thumbnail">Edit thumbnail</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="add_to_a_playlist">Add to a playlist</string>
    <string name="share">Share</string>
    <string name="move_up">Move up</string>
    <string name="move_down">Move down</string>
    <string name="delete_from_queue">Delete from queue</string>
    <string name="more">More</string>
    <string name="singles">Singles</string>
    <string name="related_artists">Related Artists</string>
    <string name="about">About</string>
    <string name="let_s_start_with_a_radio">LET\'S START WITH A RADIO</string>
    <string name="let_s_pick_a_playlist_for_you">LET\'S PICK A PLAYLIST FOR YOU</string>
    <string name="moods_amp_moment"><![CDATA[Moods & Moment]]></string>
    <string name="genre">Genre</string>
    <string name="what_is_best_choice_today">WHAT IS BEST CHOICE TODAY</string>
    <string name="chart">Chart</string>
    <string name="global">Global</string>
    <string name="top_tracks">Top tracks</string>
    <string name="top_artists">Top artists</string>
    <string name="your_playlist">Your Playlist</string>
    <string name="lyrics">Lyrics</string>
    <string name="all">All</string>
    <string name="videos">Videos</string>
    <string name="content">Content</string>
    <string name="storage">Storage</string>
    <string name="player_cache">Player Cache</string>
    <string name="downloaded_cache">Downloaded Cache</string>
    <string name="thumbnail_cache">Thumbnail Cache</string>
    <string name="backup">Backup</string>
    <string name="backup_your_data">Backup Your Data</string>
    <string name="save_all_your_playlist_data">Save all your playlist data</string>
    <string name="restore_your_data">Restore Your Data</string>
    <string name="restore_your_saved_data">Restore your saved data</string>
    <string name="about_us">About us</string>
    <string name="version">Version</string>
    <string name="title">Title</string>
    <string name="album">Album</string>
    <string name="youtube_url">YouTube URL</string>
    <string name="download_url">Download URL</string>
    <string name="now_playing">Now Playing</string>
    <string name="queue">Queue</string>
    <string name="recently">Recently</string>
    <string name="settings">Settings</string>
    <string name="now_playing_upper">NOW PLAYING</string>
    <string name="language">Language</string>
    <string name="what_do_you_want_to_listen_to">What do you want to listen to?</string>
    <string name="songs_inArtist">Songs</string>
    <string name="albums_inArtist">Albums</string>
    <string name="singles_inArtist">Singles</string>
    <string name="fans_might_also_like_inArtist">Fans might also like</string>
    <string name="crash_log">Pure Music crashed. Sorry for this problem.\nSend crash-log to developer</string>
    <string name="crash">Crash</string>
    <string name="send">Send</string>
    <string name="mail_subject">Report Crash</string>
    <string name="delete_song_from_playlist">Delete this song from playlist</string>
    <string name="log_in">Log in</string>
    <string name="log_in_to_YouTube">Log in to YouTube</string>
    <string name="log_in_to_get_personally_data">Log in to get personally data</string>
    <string name="login_success">Login success</string>
    <string name="log_out">Log out from YouTube</string>
    <string name="logged_in">Logged in</string>
    <string name="logged_out">Logged out</string>
    <string name="playlist">Playlist</string>
    <string name="restart_app">Restart app to apply the change</string>
    <string name="balance_media_loudness">Balance media loudness</string>
    <string name="normalize_volume">Normalize Volume</string>
    <string name="audio">Audio</string>
    <string name="no_equalizer">Your device doesn\'t have equalizer</string>
    <string name="open_system_equalizer">Open system equalizer</string>
    <string name="use_your_system_equalizer">Use your system equalizer</string>
    <string name="streaming_data_provider_piped">Streaming data provider (Piped)</string>
    <string name="itag">Itag</string>
    <string name="mime_type">Mime Type</string>
    <string name="bitrate">Bitrate</string>
    <string name="warning">Warning</string>
    <string name="change_language_warning">Changing language will close your app. Are you sure?</string>
    <string name="this_link_is_not_supported">This link is not supported</string>
    <string name="added_to_playlist">Added to playlist</string>
    <string name="description">Description</string>
    <string name="playback">Playback</string>
    <string name="save_playback_state">Save Playback State</string>
    <string name="save_shuffle_and_repeat_mode">Save shuffle and repeat mode</string>
    <string name="skip_silent">Skip Silent</string>
    <string name="skip_no_music_part">Skip no music part</string>
    <string name="time_out_check_internet_connection_or_change_piped_instance_in_settings">Time out, check internet connection</string>
    <string name="save_last_played">Save Last Played</string>
    <string name="save_last_played_track_and_queue">Save last played track and queue</string>
    <string name="update_available">New update available</string>
    <string name="update_message">"Version %1$s available\nRelease: %2$s\nChange logs:\n%3$s "</string>
    <string name="check_for_update">Check for update</string>
    <string name="last_checked_at">Last checked at %1$s</string>
    <string name="checking">Checking</string>
    <string name="musixmatch">Musixmatch</string>
    <string name="main_lyrics_provider">Main Lyrics Provider</string>
    <string name="log_in_to_Musixmatch">Log in to Musixmatch</string>
    <string name="only_support_email_and_password_type">Only support email and password type</string>
    <string name="musixmatch_login_description">Musixmatch Translation API works only with logged-in user. Pure Music used Musixmatch Developer API.</string>
    <string name="translation_language">Translation Language</string>
    <string name="follow_app_language">Follow app language</string>
    <string name="settings_account">Account</string>
    <string name="add_an_account">Add account</string>
    <string name="spotify">Spotify</string>
    <string name="do_more_with_youtube_music">Do more with YouTube Music</string>
    <string name="do_more_with_youtube_music_explain">Sign in now to personalize the content of the app according to your interests, listen to your playlists, and more…</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="switch_account">Switch account</string>
    <string name="delete_all_downloads">Delete all downloads</string>
    <string name="start_downloads">Start downloads</string>
    <string name="pause_downloads">Pause downloads</string>
</resources>