<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.settings.LyricsSettingsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_theme_dark_background">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:navigationIcon="@drawable/baseline_arrow_back_ios_new_24"
            app:navigationIconTint="@android:color/white"
            app:title="@string/lyrics"
            app:titleTextAppearance="@style/TextAppearance.Material3.TitleMedium" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topAppBarLayout"
        android:paddingHorizontal="20sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="180sp">

            <LinearLayout
                android:id="@+id/btMainLyricsProvider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8sp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_lyrics_provider"
                    android:textColor="@android:color/white"
                    android:textSize="16sp">

                </TextView>

                <TextView
                    android:id="@+id/tvMainLyricsProvider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/musixmatch">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btMusixmatchLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8sp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvMusixmatchLoginTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/log_in_to_Musixmatch"
                    android:textColor="@android:color/white"
                    android:textSize="16sp">

                </TextView>

                <TextView
                    android:id="@+id/tvMusixmatchLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/only_support_email_and_password_type">

                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8sp"
                    android:autoLink="web"
                    android:text="@string/musixmatch_login_description"
                    android:textSize="12sp">

                </TextView>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8sp"
                android:autoLink="web"
                android:text="@string/musixmatch_login_description"
                android:textSize="11sp"
                android:visibility="gone">

            </TextView>

            <LinearLayout
                android:id="@+id/btTranslationLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8sp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/translation_language"
                    android:textColor="@android:color/white"
                    android:textSize="16sp">

                </TextView>

                <TextView
                    android:id="@+id/tvTranslationLanguage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/follow_app_language">

                </TextView>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>