<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.settings.MainSettingsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_theme_dark_background">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:navigationIcon="@drawable/baseline_arrow_back_ios_new_24"
            app:navigationIconTint="@android:color/white"
            app:title="@string/settings_account"
            app:titleTextAppearance="@style/TextAppearance.Material3.TitleMedium" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topAppBarLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:paddingBottom="180sp">

            <LinearLayout
                android:id="@+id/layout_signed_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#1A1A1A"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingVertical="24dp"
                android:visibility="visible">

                <ImageView
                    android:layout_width="68dp"
                    android:layout_height="68dp"
                    android:src="@drawable/youtube" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingHorizontal="16dp"
                    android:text="@string/do_more_with_youtube_music"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingHorizontal="24dp"
                    android:text="@string/do_more_with_youtube_music_explain"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="#065FDE"
                    android:text="@string/sign_in"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_signed_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#1A1A1A"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingHorizontal="20sp"
                android:paddingVertical="16dp"
                android:visibility="gone">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/ivAccount"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/holder"
                        app:shapeAppearance="@style/circle">

                    </com.google.android.material.imageview.ShapeableImageView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@+id/ivAccount"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvAccountName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Test"
                            android:textColor="@android:color/white"
                            android:textSize="16sp">

                        </TextView>

                        <TextView
                            android:id="@+id/tvEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="test@gmail.com"
                            android:visibility="gone"
                            android:textSize="12sp">

                        </TextView>

                    </LinearLayout>

                </RelativeLayout>

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chipGroupTypeSearch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:chipSpacingHorizontal="@dimen/_8sdp"
                        app:selectionRequired="false"
                        app:singleLine="true"
                        app:singleSelection="false">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/sign_out"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="false"
                            android:clickable="true"
                            android:focusable="true"
                            android:text="@string/sign_out"
                            app:chipBackgroundColor="@color/bg_chip_state_list"
                            app:chipCornerRadius="@dimen/_12sdp" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/switch_account"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="false"
                            android:clickable="true"
                            android:focusable="true"
                            android:text="@string/switch_account"
                            app:chipBackgroundColor="@color/bg_chip_state_list"
                            app:chipCornerRadius="@dimen/_12sdp" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/add_account"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="false"
                            android:clickable="true"
                            android:focusable="true"
                            android:text="@string/add_an_account"
                            app:chipBackgroundColor="@color/bg_chip_state_list"
                            app:chipCornerRadius="@dimen/_12sdp" />

                    </com.google.android.material.chip.ChipGroup>

                </HorizontalScrollView>

            </LinearLayout>

            <TextView
                android:id="@+id/settings_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:paddingHorizontal="20sp"
                android:paddingVertical="10sp"
                android:text="@string/content"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/settings_audio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:paddingHorizontal="20sp"
                android:paddingVertical="10sp"
                android:text="@string/audio"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/settings_playback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:paddingHorizontal="20sp"
                android:paddingVertical="10sp"
                android:text="@string/playback"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/settings_lyrics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:paddingHorizontal="20sp"
                android:paddingVertical="10sp"
                android:text="@string/lyrics"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/settings_spotify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:paddingHorizontal="20sp"
                android:paddingVertical="10sp"
                android:text="@string/spotify"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/settings_storage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:paddingHorizontal="20sp"
                android:paddingVertical="10sp"
                android:text="@string/storage"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/settings_backup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:paddingHorizontal="20sp"
                android:paddingVertical="10sp"
                android:text="@string/backup"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/settings_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:paddingHorizontal="20sp"
                android:paddingVertical="10sp"
                android:text="@string/about_us"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>